--- a/social_site/messenger/templates/messenger/create_dialog.html
+++ b/social_site/messenger/templates/messenger/create_dialog.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>Create Dialog</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Create</button>
-    </form>
-</body>
-</html>
+{% extends 'registration/layout.html' %}
+
+{% block title %}Создать диалог{% endblock %}
+
+{% block content %}
+<h1>Create Dialog</h1>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Create</button>
+</form>
+{% endblock %}
