--- a/social_site/registration/templates/registration/edit.html
+++ b/social_site/registration/templates/registration/edit.html
@@ -3,12 +3,14 @@
 {% block title %}Edit your account{% endblock %}
 
 {% block content %}
-    <h1>Edit your account</h1>
-    <p>You can edit your account using the following form:</p>
-    <form action="." method="post" enctype="multipart/form-data">
-        {{ user_form.as_p }}
-        {{ profile_form.as_p }}
-        {% csrf_token %}
-        <p><input type="submit" value="Save changes"></p>
-    </form>
+    <div class="container-fluid">
+        <h1>Редактировать аккаунт</h1>
+        <p>Вы можете отредактировать ваш аккаунт используя следующую форму:</p>
+        <form action="." method="post" enctype="multipart/form-data">
+            {{ user_form.as_p }}
+            {{ profile_form.as_p }}
+            {% csrf_token %}
+            <p><input type="submit" value="Принять" class="btn btn-success"></p>
+        </form>
+    </div>
 {% endblock %}
