--- a/social_site/registration/templates/registration/layout.html
+++ b/social_site/registration/templates/registration/layout.html
@@ -4,23 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'registration/css/main.css' %}">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.1/css/all.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-        
-    {% block header %}
-    {% endblock %}
+    <aside>
+        СПО в сети
+    <h3>Навигация</h3>
+        <ul>
+            <li>
+                <a href="{% url 'news-feed' %}">
+                    <li><i class="fa-solid fa-house"></i> Главная</li>
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'chat-list' %}">
+                    <li><i class="fa-solid fa-house"></i> Список чатов</li>
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'edit' %}">
+                    <li><i class="fa-solid fa-house"></i> Профиль</li>
+                </a>
+            </li>
+        </ul>
+    </aside>
     
-    {% block content %}
-    {% endblock %}
+    <div class="features">
+        {% block content %}
+        {% endblock %}
+    </div>
     
-    {% block footer %}
-    {% endblock %}
 </body>
 </html>
