--- a/social_site/registration/templates/registration/layout.html
+++ b/social_site/registration/templates/registration/layout.html
@@ -4,43 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'registration/css/main.css' %}">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.1/css/all.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    {% load bootstrap5 %}
+    {% bootstrap_javascript %}
+    {% bootstrap_css %}
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-    <aside>
-        СПО в сети
-    <h3>Навигация</h3>
-        <ul>
-            <li>
-                <a href="{% url 'news-feed' %}">
-                    <li><i class="fa-solid fa-house"></i> Главная</li>
-                </a>
-            </li>
-            <li>
-                <a href="{% url 'chat-list' %}">
-                    <li><i class="fa-solid fa-house"></i> Список чатов</li>
-                </a>
-            </li>
-            <li>
-                <a href="{% url 'edit' %}">
-                    <li><i class="fa-solid fa-house"></i> Профиль</li>
-                </a>
-            </li>
-        </ul>
-    </aside>
-    
-    <div class="features">
-        {% block content %}
-        {% endblock %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">СПО в сети</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'news-feed' %}"><i class="fas fa-house"></i> Главная</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'chat-list' %}"><i class="fas fa-comments"></i> Список чатов</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'edit' %}"><i class="fas fa-user"></i> Профиль</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}"><i class="fas fa-user"></i> Выйти</a>
+                </li>
+            </ul>
+            {% if user.is_authenticated %}
+                <span class="navbar-text ms-auto">
+                Здравствуйте, {{ user.username }}
+            </span>
+            {% endif %}
+        </div>
     </div>
+</nav>
+<div class="container mt-5">
+    {% block content %}{% endblock %}
+</div>
     
 </body>
 </html>
