--- a/social_site/registration/templates/registration/password_change_form.html
+++ b/social_site/registration/templates/registration/password_change_form.html
@@ -1,13 +1,15 @@
 {% extends 'registration/layout.html' %}
-
-{% block title %}Change you password{% endblock %}
+{% load bootstrap5 %}
+{% block title %}Сменить пароль{% endblock %}
 
 {% block content %}
-    <h1>Change you password</h1>
-    <p>Use the form below to change your password.</p>
-    <form action="." method="post">
-        {{ form.as_p }}
-        <p><input type="submit" value="Change"></p>
-        {% csrf_token %}
-    </form>
+    <div class="container">
+        <h1>Сменить пароль</h1>
+        <p>Используйте форму ниже, чтобы изменить ваш пароль.</p>
+        <form action="." method="post">
+            {{ form.as_p }}
+            <p><input type="submit" value="Изменить" class="btn btn-primary"></p>
+            {% csrf_token %}
+        </form>
+    </div>
 {% endblock %}
