--- a/social_site/registration/templates/registration/password_reset_form.html
+++ b/social_site/registration/templates/registration/password_reset_form.html
@@ -1,13 +1,15 @@
 {% extends 'registration/layout.html' %}
-
-{% block title %}Reset your password{% endblock %}
+{% load bootstrap5 %}
+{% block title %}Восстановление пароля{% endblock %}
 
 {% block content %}
-    <h1>Forgotten your password?</h1>
-    <p>Enter your e-mail address to obtain a new password.</p>
-    <form action="." method="post">
-        {{ form.as_p }}
-        <p><input type="submit" value="Send e-mail"></p>
-        {% csrf_token %}
-    </form>
+    <div class="container">
+        <h1>Забыли пароль?</h1>
+        <p>Введите ваш адрес электронной почты для получения нового пароля.</p>
+        <form action="." method="post">
+            {{ form.as_p }}
+            <p><input type="submit" value="Отправить письмо" class="btn btn-primary"></p>
+            {% csrf_token %}
+        </form>
+    </div>
 {% endblock %}
