--- a/social_site/messenger/templates/messenger/create_dialog.html
+++ b/social_site/messenger/templates/messenger/create_dialog.html
@@ -1,12 +1,14 @@
 {% extends 'registration/layout.html' %}
-
+{% load bootstrap5 %}
 {% block title %}Создать диалог{% endblock %}
 
 {% block content %}
-<h1>Create Dialog</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Create</button>
-</form>
+    <div class="container mt-4">
+        <h1 class="mb-4">Создать диалог</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Создать</button>
+        </form>
+    </div>
 {% endblock %}
