--- a/social_site/registration/templates/registration/edit.html
+++ b/social_site/registration/templates/registration/edit.html
@@ -1,16 +1,16 @@
 {% extends 'registration/layout.html' %}
-
+{% load bootstrap5 %}
 {% block title %}Edit your account{% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
-        <h1>Редактировать аккаунт</h1>
-        <p>Вы можете отредактировать ваш аккаунт используя следующую форму:</p>
+    <div class="container">
+        <h1 class="mb-4">Редактировать аккаунт</h1>
+        <p>Вы можете отредактировать ваш аккаунт, используя следующую форму:</p>
         <form action="." method="post" enctype="multipart/form-data">
+            {% csrf_token %}
             {{ user_form.as_p }}
             {{ profile_form.as_p }}
-            {% csrf_token %}
-            <p><input type="submit" value="Принять" class="btn btn-success"></p>
+            <button type="submit" class="btn btn-success mt-3">Принять</button>
         </form>
     </div>
 {% endblock %}
