--- a/social_site/registration/templates/registration/logged_out.html
+++ b/social_site/registration/templates/registration/logged_out.html
@@ -1,6 +1,10 @@
 {% extends 'registration/layout.html' %}
-{% block title %}Logged out{% endblock %}
+{% load bootstrap5 %}
+{% block title %}Вы вышли из системы{% endblock %}
+
 {% block content %}
-    <h1>Logged out</h1>
-    <p>You have been successfully logged out. You can <a href="{% url 'login' %}">log-in again</a>.</p>
+    <div class="container mt-5">
+        <h1>Вы вышли из системы</h1>
+        <p>Вы успешно вышли из системы. Вы можете <a href="{% url 'login' %}">войти снова</a>.</p>
+    </div>
 {% endblock %}
