--- a/social_site/registration/templates/registration/login.html
+++ b/social_site/registration/templates/registration/login.html
@@ -1,12 +1,15 @@
 {% extends 'registration/layout.html' %}
+{% load bootstrap5 %}
 {% block title %}Log-in{% endblock %}
 {% block content %}
-    <h1>Log-in</h1>
-    <p>Please, use the following form to log-in. If you don't have an account <a href="{% url 'register' %}">register here</a></p>
-    <form action="." method="post">
-        {{ form.as_p }}
-        {% csrf_token %}
-        <p><input type="submit" value="Log-in"></p>
-    </form>
-    <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
+    <div class="container">
+        <h1 class="mb-4">Вход</h1>
+        <p>Используйте следующую форму для входа. Если у вас нет аккаунта, <a href="{% url 'register' %}">зарегистрируйтесь</a>.</p>
+        <form action="." method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary mt-3">Войти</button>
+        </form>
+        <p class="mt-3"><a href="{% url 'password_reset' %}">Забыли пароль?</a></p>
+    </div>
 {% endblock %}
