--- a/social_site/registration/templates/registration/password_change_done.html
+++ b/social_site/registration/templates/registration/password_change_done.html
@@ -1,8 +1,10 @@
 {% extends 'registration/layout.html' %}
-
-{% block title %}Password changed{% endblock %}
+{% load bootstrap5 %}
+{% block title %}Изменение пароля{% endblock %}
 
 {% block content %}
-    <h1>Password changed</h1>
-    <p>Your password has been successfully changed.</p>
+    <div class="container">
+        <h1>Изменение пароля</h1>
+        <p>Ваш пароль был успешно изменен.</p>
+    </div>
 {% endblock %}
