--- a/social_site/registration/templates/registration/password_reset_complete.html
+++ b/social_site/registration/templates/registration/password_reset_complete.html
@@ -1,8 +1,10 @@
-{% extends 'registration/layout.html' %}
-
-{% block title %}Password reset{% endblock %}
+{{% extends 'registration/layout.html' %}
+{% load bootstrap5 %}
+{% block title %}Установка пароля{% endblock %}
 
 {% block content %}
-    <h1>Password set</h1>
-    <p>Your password has been set. You can <a href="{% url 'login' %}">log in now</a></p>
+    <div class="container">
+        <h1>Пароль установлен</h1>
+        <p>Ваш пароль был установлен. Теперь вы можете <a href="{% url 'login' %}">войти</a>.</p>
+    </div>
 {% endblock %}
