--- a/social_site/registration/templates/registration/password_reset_confirm.html
+++ b/social_site/registration/templates/registration/password_reset_confirm.html
@@ -1,18 +1,19 @@
 {% extends 'registration/layout.html' %}
-
-{% block title %}Reset your password{% endblock %}
+{% load bootstrap5 %}
+{% block title %}Сброс пароля{% endblock %}
 
 {% block content %}
-    <h1>Reset your password</h1>
-    {% if validlink %}
-        <p>Please enter your new password twice:</p>
-        <form action="." method="post">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <p><input type="submit" value="Change my password"/></p>
-        </form>
-    {% else %}
-        <p>The password reset link was invalid, possibly because it has
-            already been used. Please request a new password reset.</p>
-    {% endif %}
+    <div class="container">
+        <h1>Сброс пароля</h1>
+        {% if validlink %}
+            <p>Пожалуйста, введите ваш новый пароль дважды:</p>
+            <form action="." method="post">
+                {{ form.as_p }}
+                {% csrf_token %}
+                <p><input type="submit" value="Изменить пароль" class="btn btn-primary"/></p>
+            </form>
+        {% else %}
+            <p>Ссылка для сброса пароля недействительна, возможно, она уже была использована. Пожалуйста, запросите новый сброс пароля.</p>
+        {% endif %}
+    </div>
 {% endblock %}
