--- a/social_site/registration/templates/registration/password_reset_done.html
+++ b/social_site/registration/templates/registration/password_reset_done.html
@@ -1,8 +1,11 @@
 {% extends 'registration/layout.html' %}
-{% block title %}Reset your password{% endblock %}
+{% load bootstrap5 %}
+{% block title %}Сброс пароля{% endblock %}
 
 {% block content %}
-    <h1>Reset your password</h1>
-    <p>We've emailed you instructions for setting your password.</p>
-    <p>If you don't receive an email, please make sure you've entered the address you registered with.</p>
+    <div class="container">
+        <h1>Сброс пароля</h1>
+        <p>Мы отправили вам инструкции по установке пароля на вашу электронную почту.</p>
+        <p>Если вы не получили письмо, убедитесь, что вы ввели адрес, с которым вы зарегистрировались.</p>
+    </div>
 {% endblock %}
