--- a/social_site/registration/templates/registration/register_done.html
+++ b/social_site/registration/templates/registration/register_done.html
@@ -1,8 +1,10 @@
 {% extends 'registration/layout.html' %}
-
-{% block title %}Welcome{% endblock %}
+{% load bootstrap5 %}
+{% block title %}Добро пожаловать{% endblock %}
 
 {% block content %}
-    <h1>Welcome {{ new_user.first_name }}!</h1>
-    <p>Your account has been successfully created. Now you can <a href="{% url 'login' %}">log in</a>.</p>
+    <div class="container">
+        <h1>Добро пожаловать, {{ new_user.first_name }}!</h1>
+        <p>Ваш аккаунт был успешно создан. Теперь вы можете <a href="{% url 'login' %}">войти</a>.</p>
+    </div>
 {% endblock %}
