--- a/social_site/registration/templates/registration/registration.html
+++ b/social_site/registration/templates/registration/registration.html
@@ -1,5 +1,6 @@
 {% extends 'registration/layout.html' %}
 {% load static %}
+{% load bootstrap5 %}
 {% load crispy_forms_tags %}
 {% block title %} registration {% endblock %}
 
