--- a/social_site/registration/templates/registration/signin.html
+++ b/social_site/registration/templates/registration/signin.html
@@ -1,5 +1,6 @@
 {% extends 'registration/layout.html' %}
 {% load static %}
+{% load bootstrap5 %}
 {% load crispy_forms_tags %}
 {% block title %} signin {% endblock %}
 {% block header %}
@@ -10,45 +11,15 @@
 {% if form.errors %}
   <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
-
-{% if next %}
-  {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-  {% else %}
-    <p>Please login to see this page.</p>
-  {% endif %}
-{% endif %}
-<div class="container-fluid display-6" >
-  <div class="row align-items-center">
-      <div class="row justify-content-center">
-          <div class="col-5">
-            <h1>Log-in</h1>
-            <p>
-              Please, use the following form to log-in. If you don't have an account 
-              <a href="{% url 'registration' %}" class="btn btn-primary btn-lg">register here</a>
-            </p>
-            <form action="." method="post">
-                {{ form.as_p }}
-                {% csrf_token %}
-                <p>
-                  <input type="submit" value="Log-in" class="btn btn-primary btn-lg">
-                </p>
-            </form>
-            <p>
-              <a href="{% url 'password_reset' %}" class="btn btn-primary btn-lg">Forgotten your password?</a>
-            </p>
-          </div>
-      </div>
-      
-      <br> <br>
-      <div class="row justify-content-center">
-          <div class="col-5">
-              <div class="">
-                  <a href="{% url 'registration' %}" class="btn btn-primary btn-lg">Или зарегистрироваться</a>
-              </div>
-          </div>
-      </div>
-  </div>
+    <div class="container">
+        <h1 class="mb-4">Вход</h1>
+        <p>Используйте следующую форму для входа. Если у вас нет аккаунта, <a href="{% url 'registration' %}">зарегистрируйтесь</a>.</p>
+        <form action="." method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary mt-3">Войти</button>
+        </form>
+        <p class="mt-3"><a href="{% url 'password_reset' %}">Забыли пароль?</a></p>
+    </div>
 </div>
 {% endblock %}
